Java 8, fix typo